--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dompurify": "^3.1.0",
+    "github-markdown-css": "^5.5.1",
     "js-cookie": "^3.0.5",
     "marked": "^12.0.2",
     "next": "14.1.3",
